--- a/confectio-dark-syntax/package.json
+++ b/confectio-dark-syntax/package.json
@@ -2,7 +2,7 @@
   "name": "confectio-dark-syntax",
   "theme": "syntax",
   "version": "0.1.0",
-  "description": "A short description of your syntax theme",
+  "description": "Confectio Dark is a dark syntax theme for Atom, a nice treat for being a very good IDE.",
   "keywords": [
     "syntax",
     "theme",
