--- a/confectio-light-syntax/package.json
+++ b/confectio-light-syntax/package.json
@@ -2,7 +2,7 @@
   "name": "confectio-light-syntax",
   "theme": "syntax",
   "version": "0.1.0",
-  "description": "Confectio is a light syntax theme for Atom, a nice treat for being a very good IDE.",
+  "description": "A short description of your syntax theme",
   "keywords": [
     "syntax",
     "theme",
