--- a/confectio-dark-syntax/package.json
+++ b/confectio-dark-syntax/package.json
@@ -6,11 +6,13 @@
   "keywords": [
     "syntax",
     "theme",
-    "dark"
+    "dark",
+    "confectio",
+    "clean"
   ],
   "repository": "https://github.com/Down10/confectio-dark-syntax",
   "license": "MIT",
   "engines": {
-    "atom": ">=1.0.0"
+    "atom": ">=1.13.0 <2.0.0"
   }
 }
